# ecom-analytics-pipeline-temp

./: .env.example  .gitignore  README.md  pyproject.toml
bigquery/: loader.py
bigquery/profiling/: 01_events_profiling.sql  02_ip_locations_profiling.sql  03_products_profiling.sql
common/bigquery/: __init__.py  loader_utils.py
common/database/: mongodb_client.py
common/utils/: logger.py
config/: settings.py
dbt/macros/scd/: scd2_calculate_valid_to.sql  scd_end_date.sql  schema.yml
dbt/models/core/: dim_customer.sql  dim_date.sql  dim_device.sql  dim_exchange_rate.sql  dim_location.sql  dim_product.sql  fact_sales_order_line.sql  schema.yml
dbt/models/mart/: mart_customer_summary.sql  mart_geography_summary.sql  mart_product_performance.sql  mart_revenue_daily.sql  mart_sales_by_geography.sql  mart_sales_by_product.sql  mart_sales_daily.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_events.sql  stg_ip_locations.sql  stg_products.sql
docs/: data_dictionary.md  export_to_gcs.md  ip_location_processing.md  load_to_bigquery.md  product_crawl.md
docs/diagrams/: dimensional_model.dbml
docs/profiling/reports/: event_summary.md  ip_locations_summary.md  products_summary.md
ingestion/ip_location/: extract_unique_ips.py
ingestion/product_crawler/: __main__.py  config.py  crawl_products.py  crawl_products_parallel.py  crawler.py  extract_product_urls.py  extractor.py  fetch_httpx.py  parsers.py  retry.py  retry_failed.py  utils.py
ingestion/shared/: gcs_writer.py
ingestion/sources/ip_locations/: extract_unique_ips.py  process_ip.py
ingestion/sources/products/: __init__.py  __main__.py  config.py  crawler.py  extractor.py  parsers.py  retry.py  utils.py
scripts/: upload_to_gcs.sh
scripts/crawl/: test_playwright.py
scripts/data_quality/: ip_null_country.py  product_names_null.py
scripts/explore_raw_glamira/: 01_total_count.py  01_total_count.txt  02_sample_documents.txt  03_distinct_collections.txt  04_field_list.js  05_null_rates.js  05_null_rates.py  06_timestamp_range.js  07_distinct_stores.js  08_nested_structures.js  09_distinct_product_count.js
scripts/mongodb/: create_indexes.js
tests/unit/product_crawler/: __init__.py  test_parsers.py  test_utils.py
(+2 files in other folders)
