[project]
name = "ecom-analytics-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Thu Phan",email = "thuleanhphan@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false